Project

General

Profile

Actions

Bug #15909

closed

Segfault in 'rbd::mirror::ImageReplayer<librbd::ImageCtx>::update_mirror_image_status'

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

 1: (()+0x3780ea) [0x7f38d604d0ea]
 2: (()+0xf100) [0x7f38cb5a7100]
 3: (()+0xa80aa) [0x7f38cc3de0aa]
 4: (librados::IoCtx::aio_operate(std::string const&, librados::AioCompletion*, librados::ObjectWriteOperation*)+0x4b) [0x7f38cc397b7b]
 5: (rbd::mirror::ImageReplayer<librbd::ImageCtx>::update_mirror_image_status(bool, rbd::mirror::ImageReplayer<librbd::ImageCtx>::State)+0x8c8) [0x7f38d5ea3608]
 6: (FunctionContext::finish(int)+0x2a) [0x7f38d5e9dafa]
 7: (Context::complete(int)+0x9) [0x7f38d5e932a9]
 8: (ThreadPool::worker(ThreadPool::WorkThread*)+0xa7e) [0x7f38d607438e]
 9: (ThreadPool::WorkThread::entry()+0x10) [0x7f38d6075260]
 10: (()+0x7dc5) [0x7f38cb59fdc5]
 11: (clone()+0x6d) [0x7f38ca4861cd]

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #15950: jewel: Segfault in 'rbd::mirror::ImageReplayer<librbd::ImageCtx>::update_mirror_image_status'ResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Priority changed from Normal to Urgent
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #15950: jewel: Segfault in 'rbd::mirror::ImageReplayer<librbd::ImageCtx>::update_mirror_image_status' added
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF